--- a/api/templates/log.html.j2
+++ b/api/templates/log.html.j2
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Decarbnow Backend, Log {{ file }}</title>
-</head>
-<body>
-    <div class="container" style="font-family: monospace">
+{% extends "index.html.j2" %}
+{% block title %}Log {{ file }}{% endblock %}
+{% block content %}
+    <div>
         {% for f in files %}
             <a href='/log/{{f}}/html'>{{ f }}</a>
         {% endfor %}
@@ -18,5 +12,4 @@
             {% endfor %}
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
