--- a/api/templates/index.html.j2
+++ b/api/templates/index.html.j2
@@ -27,11 +27,13 @@
                 <a href='/tweets/all'>tweets</a>
                 <a href='/tweets/stories'>stories</a>
                 <a href='/tweets/forest'>forest</a>
-                <a href='/tweets' target="_blank">api json↗</a>
+
                 <a href='/log/listener/html'>log</a>
             </div>
             <div>
-                <a href='/tweets/forest/save' target="_blank">renew api json↗</a>
+                api json:
+                <a href='/tweets' target="_blank">show↗</a>
+                <a href='/tweets/forest/save' target="_blank">renew↗</a>
             </div>
         </div>
         <br/>
