renaming save to renew forest

--- a/api/templates/index.html.j2
+++ b/api/templates/index.html.j2
@@ -33,7 +33,7 @@
             <div>
                 api json:
                 <a href='/tweets' target="_blank">show↗</a>
-                <a href='/tweets/forest/save' target="_blank">renew↗</a>
+                <a href='/tweets/forest/renew' target="_blank">renew↗</a>
             </div>
         </div>
         <br/>
